Finalised bug fix with iframe on IOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -571,8 +571,8 @@ footer {
       width: 100%;
       height: auto;
       margin: 5px;
-    }
-  
+      border: none;
+    }  
   .img-contain {
     display: -webkit-box;
     display: -ms-flexbox;
